fix menu overlapping

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -6,6 +6,7 @@
   overflow: auto;
   overflow-x: hidden;
   height: 100vh;
+  z-index: 1;
 
   &__main-picture {
     @include onTablet {
@@ -70,6 +71,9 @@
     line-height: 24px;
     color: $white-color;
     text-decoration: none;
+
+    transition: all $effectDuration;
+    @include hover(font-size, 17px);
   }
 
   &__info {
